paragraph spacing fix

--- a/style/main.scss
+++ b/style/main.scss
@@ -105,7 +105,6 @@ h1, h2 {
                 }
             }
             &-p {
-                margin-bottom: 2em;
                 opacity: 1;
                 @media screen and (min-width: $md) {
                     opacity: 0;
